--- a/src/styles/landyn/landyn.css
+++ b/src/styles/landyn/landyn.css
@@ -65,7 +65,7 @@ header{
     left: 120px;
 }
 .info h2{
-    font-size: 4.3em;
+    font-size: 3.3em;
     font-weight: 800;
     color: #f1f1f1;
     margin: 0 0 10px;
@@ -78,15 +78,18 @@ header{
 .btn{
     margin-top: 30px;
     width: auto;
-    height: auto;
+    height: 40px;
     padding: 5px 10px;
     background: #f1f1f1;
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
+.btn a{
+    text-decoration: none;
+}
 .btn-in{
-    color: #2d2d2d;
+    color: #000;
     font-size: .9em;
 
 }
@@ -95,13 +98,25 @@ header{
 }
 
 /*main*/
-
+main{
+    width: 100%;
+    height: auto;
+}
 .list-candy{
     margin: 20px auto 0;
     width: 60%;
     display: flex;
     justify-content: space-around;
     padding: 5px 0;
+}
+.box-candy{
+    width: fit-content;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
 .candy{
     width: 50px;
@@ -118,15 +133,79 @@ header{
 }
 
 /*colores dependiendo el dulce*/
-.chocolate{
+ .chocolate{
     background: #a749c7;
+}
+.chocolateS{
+    color: #a749c7;
 }
 .cookie{
     background: #d4d638;
 }
+.cookieS{
+    color: #d4d638;
+}
 .ice{
     background: #901ba5;
 }
+.iceS{
+    color: #901ba5;
+}
 .bakery{
     background: #2740ce;
+}
+.bakeryS{
+    color: #2740ce;
+}
+/*Posters*/
+.posters{
+    width: auto;
+    height: auto;
+    margin: 20px auto 10px;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(250px, 300px));
+    gap: 10px;
+    justify-content: space-around;
+}
+.poster{
+    margin: 0;
+    padding: 0;
+}
+.poster img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+/*footer*/
+
+/*
+footer{
+    width: 100%;
+    height: auto;
+    margin: 10px auto 0;
+    background: #2740ce;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
+    justify-content: space-around;
+    gap: 10px;
+}
+*/
+footer{
+    width: 100%;
+    height: 120px;
+    margin: 10px auto 0;
+    background: #2740ce;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.box-foot{
+    width: 100%;
+    height: auto;
+    margin: 10px 0 0;
+}
+
+h3, span{
+    color: #f1f1f1;
 }
