Login and routes

--- a/src/views/form.html
+++ b/src/views/form.html
@@ -26,7 +26,7 @@
                     <div class="group-input">
                         <input type="text" required id="email" autocomplete="off">
 		                <label class="c-label" for="email">
-			                <span class="text-label">Email</span>
+			                <span class="text-label">Cuenta</span>
 		                </label>
                         <i class="bx bx-envelope"></i>
                         <span id="result-email">Invalid Email</span>
@@ -57,7 +57,6 @@
         </div>
     </div>
 
-    <script src="../functions/ready.js"></script>
-    <script src="../controller/getDataLogin.js"></script>
+    <script type="module" src="../functions/getDataLogin.js"></script>
 </body>
 </html>
